--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SocialFreak</title>
+  <title>TestOauth2</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -23,9 +23,10 @@
       <% else %>
         <ul class="nav navbar-nav">
           <li><%= link_to 'Twitter', '/auth/twitter' %></li>
-          <li><%= link_to 'Facebook', '/auth/facebook' %></li>
-          <li><%= link_to 'Google+', '/auth/google' %></li>
-          <li><%= link_to 'LinkedIn', '/auth/linkedin' %></li>
+          <li><%= link_to 'HipChat', '/auth/hipchat' %></li>
+          <!--<li><%#= link_to 'Facebook', '/auth/facebook' %></li>-->
+          <!--<li><%#= link_to 'Google+', '/auth/google' %></li>-->
+          <!--<li><%#= link_to 'LinkedIn', '/auth/linkedin' %></li>-->
         </ul>
       <% end %>
     </div>
@@ -40,12 +41,6 @@
   <% end %>
 
   <%= yield %>
-</div>
-
-<div id="footer">
-  <div class="container">
-    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
-  </div>
 </div>
 
 </body>
