--- a/app/views/pages/_welcome.html.erb
+++ b/app/views/pages/_welcome.html.erb
@@ -1,4 +1,11 @@
 <div class="jumbotron">
   <h1>Welcome!</h1>
   <p>Authenticate via one of the social networks to get started.</p>
+
+
+  <a target="_blank"
+  href="https://www.hipchat.com/addons/install?url=http://ec2-54-164-6-135.compute-1.amazonaws.com/hipchat">
+  Install HipChat Integration
+  </a>
+
 </div>
