--- a/app/views/pages/_welcome.html.erb
+++ b/app/views/pages/_welcome.html.erb
@@ -1,11 +1,9 @@
 <div class="jumbotron">
   <h1>Welcome!</h1>
-  <p>Authenticate via one of the social networks to get started.</p>
+  <p>Connect your org to hipchat to be able to send notifications directly into the chat room.</p>
 
-
-  <a target="_blank"
-  href="https://www.hipchat.com/addons/install?url=http://ec2-54-164-6-135.compute-1.amazonaws.com/hipchat">
-  Install HipChat Integration
-  </a>
+  <br>
+  <br>
+  <%= link_to "Org1 settings", hipchat_configs_installed_path %>
 
 </div>
