--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TestOauth2</title>
+  <title>Hipchat Connect</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -12,23 +12,12 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to 'Social Freak', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Hipchat Connect', root_path, class: 'navbar-brand' %>
     </div>
     <div id="navbar">
-      <% if current_user %>
-        <ul class="nav navbar-nav pull-right">
-          <li><%= image_tag current_user.image_url, alt: current_user.name %></li>
-          <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
-        </ul>
-      <% else %>
-        <ul class="nav navbar-nav">
-          <li><%= link_to 'Twitter', '/auth/twitter' %></li>
-          <li><%= link_to 'HipChat', '/auth/hipchat' %></li>
           <!--<li><%#= link_to 'Facebook', '/auth/facebook' %></li>-->
           <!--<li><%#= link_to 'Google+', '/auth/google' %></li>-->
           <!--<li><%#= link_to 'LinkedIn', '/auth/linkedin' %></li>-->
-        </ul>
-      <% end %>
     </div>
   </div>
 </nav>
